# adventofcode

./: .gitignore  README.md
2020/: Cargo.toml
2020/src/: main.rs  support.rs
2020/src/d01/: mod.rs
2020/src/d02/: mod.rs
2020/src/support/: chargrid.rs  geom.rs  input.rs  memorize.rs  mod.rs  num.rs  runtime.rs  scan.rs  string.rs  tuple_append.rs
2020/src/support/alg/: clique.rs  mod.rs  range_inc.rs  range_set.rs  search.rs
2020/src/support/geom/: cuboid.rs  gridarea.rs  line.rs  line_eq.rs  mod.rs  point.rs  point3.rs  rect.rs  transform3.rs
2020/src/support/num/: diophantine.rs  mod.rs
2020/src/support/runtime/: answer.rs  day.rs  input.rs  mod.rs  year.rs
2020/src/y2018/: mod.rs
2020/src/y2018/d01/: mod.rs
2020/src/y2018/d02/: mod.rs
2020/src/y2018/d03/: mod.rs
2020/src/y2018/d17/: mod.rs
2020/src/y2018/d20/: mod.rs
2020/src/y2019/: intcode.rs  mod.rs
2020/src/y2019/d01/: mod.rs
2020/src/y2019/d02/: mod.rs
2020/src/y2019/d03/: mod.rs
2020/src/y2019/d04/: mod.rs
2020/src/y2019/d05/: mod.rs
2020/src/y2019/d06/: mod.rs
2020/src/y2019/d07/: mod.rs
2020/src/y2019/d08/: mod.rs
2020/src/y2019/d09/: mod.rs
2020/src/y2019/d10/: mod.rs
2020/src/y2019/d11/: mod.rs
2020/src/y2019/d12/: mod.rs
2020/src/y2019/d13/: mod.rs
2020/src/y2019/d22/: mod.rs
2020/src/y2019/d23/: mod.rs
2020/src/y2019/d24/: mod.rs
2020/src/y2019/d25/: mod.rs
2020/src/y2020/: mod.rs
2020/src/y2020/d01/: mod.rs
2020/src/y2020/d02/: mod.rs
2020/src/y2021/: mod.rs
2020/src/y2022/: mod.rs
2020/src/y2023/: mod.rs
2020/src/y2024/: mod.rs
(+200 files in other folders)
