[package]
name = "aoc2020"
version = "0.1.0"
authors = ["kjohnson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitreader="0.3.4"
data-encoding="2.3.2"
itertools="0.10.3"
modinverse="0.1.1"
num-traits="0.2"
pathfinding="3.0.4"
regex = "1.5.4"
structopt="0.3.25"
