[package]
name = "aoc2020"
version = "0.1.0"
authors = ["kjohnson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitreader="0.3.11"
data-encoding="2.6.0"
itertools="0.13.0"
modinverse="0.1.1"
num-traits="0.2.19"
pathfinding="4.11.0"
rayon="1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features=["blocking"] }
structopt="0.3.25"
